--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
     <ul id="donuts">
       <li ng-repeat="donut in donuts.all">
         <strong>{{donut.style}}</strong> <em>{{donut.flavor}}</em>
+        <button ng-click="donuts.delete($index)">X</button>
       </li>
     </ul>
 
     <form class="add-donut" ng-submit='donuts.addDonut()'>
       <div>
-        <label for="new-donut-style">Donut Style</label>
+        <label for="new-donut-style"></label>
         <input type="text" id="new-donut-style" placeholder="Style" ng-model='donuts.newDonut.style'>
       </div>
 
       <div>
-        <label for="new-donut-flavor">Donut Flavour</label>
+        <label for="new-donut-flavor"></label>
         <input type="text" id="new-donut-flavor" placeholder="Flavor" ng-model='donuts.newDonut.flavor'>
       </div>
 
